# SerialCom_Ros

./: README.md
Workspace/devel/: .catkin
Workspace/devel/lib/pkgconfig/: serial_com.pc
Workspace/devel/lib/serial_com/: serial_communication_node  serial_node_decision
Workspace/devel/share/serial_com/cmake/: serial_comConfig.cmake
Workspace/devel/share/serial_msg/cmake/: serial_msg-msg-paths.cmake
Workspace/src/serial_com/: CMakeLists.txt  package.xml
Workspace/src/serial_com/src/: serial_communication_node.cpp  serial_node_decision.cpp
